# cli-tools

./: .gitignore  LICENSE  README.md  README.zh.md  package-lock.json  package.json  pyproject.toml
docs/: 00-rfc-master-architecture.md  01-platform-overview.md  02-config-model.md  03-provider-sdk.md  04-runtime-execution.md  05-implementation-plan.md  06-ai-friendly-architecture.md  07-import-and-schema-discovery.md  08-observability-and-logs.md  09-error-handling-and-recovery.md  10-versioning-and-migration.md  11-auth-lifecycle.md  12-reliability-and-rate-limits.md  13-schema-drift-and-reconciliation.md  14-status-and-roadmap.md  15-install-and-usage.md
docs/examples/: cts.example.yaml
docs/usage/: README.md
examples/demo/: cts.yaml  echo-manifest.yaml
examples/mcp/: bing-cts.yaml  bing-mcp-servers.json
front_new/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/: README.md
src/cts/: app.py  (+12 more)
tests/: test_auth.py  test_cli_completion_importer.py  test_cli_help_importer.py  test_cli_management.py  test_cli_manpage_importer.py  test_cli_schema_importer.py  test_demo_cli.py  test_discovery_cache_and_sync.py  test_graphql_provider.py  test_http_surface.py  test_lint_and_logging.py  test_logging_enhancements.py  test_mcp_provider.py  test_mcp_provider_import_plan.py  test_openapi_provider.py  test_phase3_governance.py  test_phase5_ecosystem.py  test_plugins_and_hooks.py  test_provider_unified_import.py  test_reliability.py  test_split_config.py  test_text_rendering.py
(+278 files in other folders)
